fixing the deprecated API issues